--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -3,8 +3,19 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:typeface">serif</item>
+    </style>
+
+    <style name="BigTitle">
+        <item name="android:textSize">40sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">#202032</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/avenirlstdmedium</item>
     </style>
 
 </resources>
