--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -18,4 +18,20 @@
         <item name="android:fontFamily">@font/avenirlstdmedium</item>
     </style>
 
+    <style name="Label">
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">#707070</item>
+        <item name="android:fontFamily">@font/avenirlstdmedium</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginStart">39dp</item>
+    </style>
+
+    <style name="FilterText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:fontFamily">@font/avenirlstdmedium</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 </resources>
