--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -18,6 +18,14 @@
         <item name="android:fontFamily">@font/avenirlstdmedium</item>
     </style>
 
+    <style name="Title">
+        <item name="android:fontFamily">@font/avenirlstdmedium</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">#202032</item>
+
+    </style>
+
     <style name="Label">
         <item name="android:textSize">16sp</item>
         <item name="android:letterSpacing">-0.03</item>
